Test for textarea done, overflow size cause of padding for textarea solved.

--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ textarea {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: medium;
 
-  width: 100%;
+  width: calc(100% - 11px);
   height: 100%;
+  padding: 5px;
 
   resize: none;
 }
